--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                             </div>
                             <br>
                             <div class="forms text-light">
-                                <form style="width: 350px;" action="#" method="post">
+                                <form style="width: 300px;" action="#" method="post">
                                     <input type="text" id="nome" name="nome" placeholder="Digite Seu Nome Completo" required>
                                     <input type="email" id="email" placeholder="Digite E-mail" name="email" required>
                                     <input type="tel" id="telefone" name="telefone" placeholder="(XX) XXXXX-XXXX" maxlength="15" required>
@@ -543,7 +543,8 @@
                                     <option value="opcao5">Sites Completos</option>
                                     <option value="opcao5">Mais informações</option>
                                     </select>
-                                    <button type="submit">Enviar</button>
+                                    <br>
+                                    <button class="w-100" type="submit">Enviar</button>
                                 </form>
                             </div>
                         </div>
