--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                         </div>
                     </article>
                 </section>
-                <section id="Mobile" class="d-flex justify-content-evenly">
+                <section id="Mobile" class="d-flex justify-content-evenly ">
                     <article class="container-md">
                         <div style="gap: 1rem;" class="text-light d-flex justify-content-evenly flex-column align-items-center">
                             <span>
@@ -508,7 +508,8 @@
                         </div>
                     </article>
                 </section>              
-                <section id="Mobile" class="d-flex justify-content-center p-3">
+                <section id="Mobile" class="d-flex justify-content-center">
+                    <br>
                     <article class="container-md d-flex justify-content-center flex-column">
                         <div class="d-flex justify-content-center align-items-center flex-column">
                             <div class="d-flex flex-column gap">
@@ -518,13 +519,14 @@
                                     <h1>Futuro?</h1>
                                 </span>
                                 <span class="text-light">
-                                    <p>Se você está em busca de uma equipe que</p>
-                                    <p><strong>enxerga além e transforma ideias em</p>
-                                    <p>soluções</strong>, junte-se a nós. Vamos criar juntos</p> 
-                                    <p>o próximo grande passo da sua empresa no</p>
-                                    <p>ganharem vida no universo digital.</p>
-                                    <p>universo digital. Preencha o formulario</p>
-                                    <p>para entramos em contato com sua empresa</p>
+                                    <p>Se você está em busca de uma equipe</p>
+                                    <p>que <strong>enxerga além e transforma ideias</p>
+                                    <p>em soluções</strong>, junte-se a nós. Vamos criar</p> 
+                                    <p>juntos o próximo grande passo da sua</p>
+                                    <p>empresa no ganharem vida no universo</p>
+                                    <p>digital. universo digital. Preencha o</p>
+                                    <p>formulario para entramos em contato</p>
+                                    <p>com sua empresa</p>
                                 </span>
                             </div>
                             <br>
