--- a/index.html
+++ b/index.html
@@ -100,15 +100,11 @@
                             <div class="Card01 d-flex justify-content-center align-items-center">
                                 <img style="width: 120% !important;" class="w-100" src="./img/wavect.webp" alt="Img02">
                             </div>
-                            <div id="cards02" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
-                                <h4>Qualidade,</h4>
-                                <h4>Código limpo e</h4>
-                                <h4>Automatizado.</h4>
+                            <div id="cards02" class="Card01 text-light text-center d-flex justify-content-center align-items-center flex-column">
+                                <h4>Qualidade,<hr> Código limpo e <hr> Automatizado.</h4>
                             </div>
-                            <div id="cards03" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
-                                <h4>Qualidade,</h4>
-                                <h4>Código limpo e</h4>
-                                <h4>Automatizado.</h4>
+                            <div id="cards03" class="Card01 text-light text-center d-flex justify-content-center align-items-center flex-column">
+                                <h4>Qualidade,<hr> Código limpo e <hr> Automatizado.</h4>
                             </div>
                             <a href="https://www.bodypowersuplementos.com.br" target="_blank" rel="noopener noreferrer">
                                 <div id="cards04" class="Card01 text-light d-flex justify-content-center align-items-center flex-column">
@@ -120,19 +116,15 @@
                 </section>
                 <section id="Mobile" class="d-flex justify-content-center Padding">
                     <article class="container-md">
-                        <span id="CardsP" class="d-flex d-flex justify-content-evenly flex-column align-items-center gap">
+                        <span id="CardsP" class="d-flex d-flex text-center justify-content-evenly flex-column align-items-center gap">
                             <div class="Card00 d-flex justify-content-center align-items-center">
                                 <img class="w-100" src="./img/wavect.webp" alt="Img02">
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
-                                <h4>Qualidade,</h4>
-                                <h4>Código limpo e</h4>
-                                <h4>Automatizado.</h4>
+                                <h4>Qualidade,<hr> Código limpo e <hr> Automatizado.</h4>
                             </div>
-                            <div class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
-                                <h4>Qualidade,</h4>
-                                <h4>Código limpo e</h4>
-                                <h4>Automatizado.</h4>
+                            <div class="Card00 text-light d-flex text-center justify-content-center align-items-center flex-column">
+                                <h4>Qualidade,<hr> Código limpo e <hr> Automatizado.</h4>
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <img class="w-100" src="./img/body.webp" alt="Img01">
