--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <article class="container-md">
                         <span style="gap: 1rem;" id="CardsP" class="d-flex justify-content-center">
                             <div class="Card01 d-flex justify-content-center align-items-center">
-                                <img style="width: 120% !important;" class="w-100" src="./img/wavect.webp" alt="Img02">
+                                <img style="width: 120% !important;" class="w-100" src="http://127.0.0.1:5500/img/wavect.webp" alt="Img02">
                             </div>
                             <div id="cards02" class="Card01 text-light text-center d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,<hr> Código limpo e <hr> Automatizado.</h4>
