--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <article class="container-md">
                         <span id="CardsP" class="d-flex d-flex text-center justify-content-evenly flex-column align-items-center gap">
                             <div class="Card00 d-flex justify-content-center align-items-center">
-                                <img class="w-100" src="./img/wavect.webp" alt="Img02">
+                                <img class="w-100" src="http://127.0.0.1:5500/img/wavect.webp" alt="Img02">
                             </div>
                             <div id="CardsMobile02" class="Card00 text-light d-flex justify-content-center align-items-center flex-column">
                                 <h4>Qualidade,<hr> Código limpo e <hr> Automatizado.</h4>
